--- a/rest-mock/build.gradle
+++ b/rest-mock/build.gradle
@@ -8,6 +8,9 @@ repositories {
 }
 
 dependencies {
+
+    implementation "com.github.tomakehurst:wiremock-jre8:2.28.0"
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
