--- a/rest-web-service/build.gradle
+++ b/rest-web-service/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'java'
 }
 
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
